src/test/resources/errors/01-error.c
extern int main () {
    float f_ptr[3];
    double * d_ptr;

    d_ptr = f_ptr;

    return 0;
}